# receive-from-cam-on-rk

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  jpg2mp4.sh  test.sh
include/: SocketClient.h  SocketServer.h  read_camera.h  rockface_control.h
include/easymedia/: media_type.h
include/rockface/: rockface.h  rockface_type.h
include/rtsp/: rtsp_lib.h
lib/: librga.so.2.0.0
lib/ffmpeg/: libavformat.so.59.16.100  libavutil.so.57.17.100  libswresample.so.4.3.100
lib/opencv/: libopencv_video.so.4.5.2  libopencv_videoio.so.4.5.2
src/: Decoder.cpp  Decoder.h  SocketClient.cpp  SocketClient.h  SocketServer.cpp  SocketServer.h  camrgb_control.cpp  camrgb_control.h  main.cpp  read_camera.cpp  read_camera.h  rockface_control.cpp  rockface_control.h  rockface_ctl.cpp  rockface_ctl.h  util.cpp  util.h  video_common.c
